// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A user visiting the Component Testing Page should have a consistent layout if the service has a warning 1`] = `
<mock-render
  __ngContext__={[Function LRootView]}
>
  <examples-weather-page>
    <h1>
      Weather App Basic examples
    </h1>
    <examples-weather-introduction
      class="block pb-4"
    />
    <div
      class="block relative min-h-100"
    >
      <examples-location
        class="block pb-4"
      />
      <examples-weather-results
        class="block pb-4"
      />
      <examples-error-message
        class="block mb-3"
      />
    </div>
    <examples-weather-explanation
      class="block pb-4"
    />
  </examples-weather-page>
</mock-render>
`;

exports[`A user visiting the Component Testing Page should have a consistent layout if the service has no warning 1`] = `
<mock-render
  __ngContext__={[Function LRootView]}
>
  <examples-weather-page>
    <h1>
      Weather App Basic examples
    </h1>
    <examples-weather-introduction
      class="block pb-4"
    />
    <div
      class="block relative min-h-100"
    >
      <examples-location
        class="block pb-4"
      />
      <examples-weather-results
        class="block pb-4"
      />
    </div>
    <examples-weather-explanation
      class="block pb-4"
    />
  </examples-weather-page>
</mock-render>
`;

exports[`A user visiting the Component Testing Page should have a consistent layout if the service is loading 1`] = `
<mock-render
  __ngContext__={[Function LRootView]}
>
  <examples-weather-page>
    <h1>
      Weather App Basic examples
    </h1>
    <examples-weather-introduction
      class="block pb-4"
    />
    <div
      class="block relative min-h-100"
    >
      <examples-loading />
    </div>
    <examples-weather-explanation
      class="block pb-4"
    />
  </examples-weather-page>
</mock-render>
`;
